api-management/1-getting-started/manifests/api-portal.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apiportal
  namespace: traefik-hub
  annotations:
    hub.traefik.io/api-portal: apiportal
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.docker.localhost`)
    kind: Rule
    services:
    - name: apiportal
      port: 9903
