api-management/1-getting-started/manifests/forecast.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weather-api-forecast
  namespace: apps
  annotations:
    hub.traefik.io/api: weather-api-forecast
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`api.docker.localhost`) && PathPrefix(`/forecast`)
    kind: Rule
    services:
    - name: weather-app-forecast
      port: 3000
